# sams-rdp-proxy-plugins

./: .gitignore  CMakeLists.txt  LICENSE  README.md
common/: CMakeLists.txt  text_renderer.c  text_renderer.h
totp-auth/: CMakeLists.txt  totp_auth.c  totp_auth.h
wol-wait/: CMakeLists.txt  wol_wait.c  wol_wait.h
